--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pet Finder</title>
+  </head>
+  <body>
     <h1>Pet Finder</h1>
-    
+    <a href="http://localhost:8080/"></a>
+    <br>
+    <section>
+      <div>
+        <a href="http://localhost:8080/api/v1/pets">View Pets</a>
+      </div>
+      <div>
+        <a href="http://localhost:8080/api/v1/pets/owner">Find by Owner's Name</a>
+      </div>
+      <div>
+        <a href="http://localhost:8080/api/v1/pets/:name">Find by Pet's Name</a>
+      </div>
+    </section>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
